# tradingBot

./: README.md  cli.py  pyproject.toml
bot/: client.py  logging_config.py  models.py  orders.py  settings.py  validators.py
