[project]
name = "tradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-binance>=1.0.36",
    "questionary>=2.1.1",
    "typer>=0.25.1",
]
